Crash when enter on edit mode of a bone's custom object #72788

Closed
opened 2019-12-30 11:21:04 +01:00 by Rubén Giménez · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-27 20:38, hash: c2a37867f2
Worked: (optional)

Short description of error
A bone with a Custom Object makes blender crashes when entering on edit mode to edit the custom shape.

Exact steps for others to reproduce the error
On the file attached, select de the "Eye Shape" (custom object for the "Eye_L" bone) and hit tab to enter edit mode.

50 - crash.png

50 - crash simple.blend

Thanks!

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-27 20:38, hash: `c2a37867f2` Worked: (optional) **Short description of error** A bone with a Custom Object makes blender crashes when entering on edit mode to edit the custom shape. **Exact steps for others to reproduce the error** On the file attached, select de the "Eye Shape" (custom object for the "Eye_L" bone) and hit tab to enter edit mode. ![50 - crash.png](https://archive.blender.org/developer/F8251670/50_-_crash.png) [50 - crash simple.blend](https://archive.blender.org/developer/F8251669/50_-_crash_simple.blend) Thanks!

Added subscriber: @herostudio.eu

Added subscriber: @herostudio.eu

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Confirmed on Windows:

image.png

Call Stack:

extract_run(TaskPool * UNUSED_pool, void * taskdata, int UNUSED_threadid) Line 4288	C
extract_task_create(TaskPool * task_pool, const MeshRenderData * mr, const MeshExtract * extract, void * buf, int * task_counter) Line 4358	C
mesh_buffer_cache_create_requested(MeshBatchCache * cache, MeshBufferCache mbc, Mesh * me, const bool do_final, const bool do_uvedit, const bool use_subsurf_fdots, const DRW_MeshCDMask * cd_layer_used, const ToolSettings * ts, const bool use_hide) Line 4497	C
DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const Scene * scene, const bool is_paint_mode, const bool use_hide) Line 1416	C
drw_batch_cache_generate_requested(Object * ob) Line 3427	C
drw_shgroup_bone_custom_solid(ArmatureDrawContext * ctx, const float- [x] * bone_mat, const float * bone_color, const float * hint_color, const float * outline_color, Object * custom) Line 569	C
draw_bone_custom_shape(ArmatureDrawContext * ctx, EditBone * eBone, bPoseChannel * pchan, bArmature * arm, const int boneflag, const short constflag, const int select_id) Line 1523	C
draw_armature_pose(ArmatureDrawContext * ctx) Line 2128	C
OVERLAY_armature_cache_populate(OVERLAY_Data * vedata, Object * ob) Line 2272	C
OVERLAY_cache_populate(void * vedata, Object * ob) Line 291	C
drw_engines_cache_populate(Object * ob) Line 1147	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1569	C
DRW_draw_view(const bContext * C) Line 1486	C
view3d_draw_view(const bContext * C, ARegion * ar) Line 1533	C
view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1558	C
ED_region_do_draw(bContext * C, ARegion * ar) Line 539	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 628	C
wm_draw_window(bContext * C, wmWindow * win) Line 766	C
wm_draw_update(bContext * C) Line 946	C
WM_main(bContext * C) Line 424	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C
Confirmed on Windows: ![image.png](https://archive.blender.org/developer/F8251685/image.png) Call Stack: ```mesh_extract_iter(const MeshRenderData * mr, const eMRIterType iter_type, int start, int end, const MeshExtract * extract, void * user_data) Line 4237 C extract_run(TaskPool * UNUSED_pool, void * taskdata, int UNUSED_threadid) Line 4288 C extract_task_create(TaskPool * task_pool, const MeshRenderData * mr, const MeshExtract * extract, void * buf, int * task_counter) Line 4358 C mesh_buffer_cache_create_requested(MeshBatchCache * cache, MeshBufferCache mbc, Mesh * me, const bool do_final, const bool do_uvedit, const bool use_subsurf_fdots, const DRW_MeshCDMask * cd_layer_used, const ToolSettings * ts, const bool use_hide) Line 4497 C DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const Scene * scene, const bool is_paint_mode, const bool use_hide) Line 1416 C drw_batch_cache_generate_requested(Object * ob) Line 3427 C drw_shgroup_bone_custom_solid(ArmatureDrawContext * ctx, const float- [x] * bone_mat, const float * bone_color, const float * hint_color, const float * outline_color, Object * custom) Line 569 C draw_bone_custom_shape(ArmatureDrawContext * ctx, EditBone * eBone, bPoseChannel * pchan, bArmature * arm, const int boneflag, const short constflag, const int select_id) Line 1523 C draw_armature_pose(ArmatureDrawContext * ctx) Line 2128 C OVERLAY_armature_cache_populate(OVERLAY_Data * vedata, Object * ob) Line 2272 C OVERLAY_cache_populate(void * vedata, Object * ob) Line 291 C drw_engines_cache_populate(Object * ob) Line 1147 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1569 C DRW_draw_view(const bContext * C) Line 1486 C view3d_draw_view(const bContext * C, ARegion * ar) Line 1533 C view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1558 C ED_region_do_draw(bContext * C, ARegion * ar) Line 539 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 628 C wm_draw_window(bContext * C, wmWindow * win) Line 766 C wm_draw_update(bContext * C) Line 946 C WM_main(bContext * C) Line 424 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ```

I have tested with more files and any bone with custom shape will crash when edit the custom shape mesh. Only crash if the Bone and the Custom shape are visible.

I have tested with more files and any bone with custom shape will crash when edit the custom shape mesh. Only crash if the Bone and the Custom shape are visible.
Jeroen Bakker self-assigned this 2019-12-30 12:19:22 +01:00

This issue was referenced by f7fb1de41b

This issue was referenced by f7fb1de41b68d90d971ea9ef1479a9a9a695fa04
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Wow! That was quick! You are an incredible and super talented people.
Thank you very much for your work and dedication guys!
Happy new year!

Wow! That was quick! You are an incredible and super talented people. Thank you very much for your work and dedication guys! Happy new year!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72788
No description provided.